--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
         "moment": "^2.29.4",
         "mysql2": "^3.1.2",
         "nodemon": "^2.0.20",
+        "pg": "^8.11.0",
+        "pg-hstore": "^2.3.4",
         "reflect-metadata": "^0.1.13",
         "sequelize": "^6.28.0",
         "typescript": "^4.9.5",
