--- a/.env.example
+++ b/.env.example
@@ -3,16 +3,13 @@ APP_PORT=
 HOST=
 WEBHOOKS_HOST=
 
+API_DOMAIN= # or ngrok to localhost:3000
 SHOPIFY_API_KEY=
 SHOPIFY_API_SECRET=
-SHOPIFY_APP_SLUG=
 SCOPES=
 SHOPIFY_API_VERSION=
 
-SHOPIFY_APP_TITLE=
-SHOPIFY_APP_ID=
-
-DB_CONNECTION=mysql
+DB_CONNECTION=postgres
 DB_HOST=
 DB_PORT=
 DB_DATABASE=
