--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
           "tabWidth": 4,
           "useTabs": false,
           "singleQuote": true,
-          "trailingComma": "all"
+          "trailingComma": "none"
         }
       ],
       "curly": "error",
