--- a/.env.example
+++ b/.env.example
@@ -6,29 +6,28 @@ WEBHOOKS_HOST=
 API_DOMAIN= # or ngrok to localhost:3000
 SHOPIFY_API_KEY=
 SHOPIFY_API_SECRET=
-SCOPES=
 SHOPIFY_API_VERSION=
 
-DB_CONNECTION=postgres
+# DB_CONNECTION=postgres
+# DB_HOST=
+# DB_PORT=
+# DB_DATABASE=
+# DB_USERNAME=
+# DB_PASSWORD=
+
+DB_CONNECTION=mysql
 DB_HOST=
 DB_PORT=
 DB_DATABASE=
 DB_USERNAME=
 DB_PASSWORD=
 
-# DB_CONNECTION=mysql
-# DB_HOST="10.0.100.5"
-# DB_PORT="3307"
-# DB_DATABASE="madp"
-# DB_USERNAME="madp"
-# DB_PASSWORD="VzoZBw0vTvrawSzEl9vr"
-
 REDIS_HOST_URI=
 REDIS_DB=
 REDIS_PORT=
 REDIS_PASS=
 
-# multi queries separated by comma ","
+# multi queues name separated by comma ","
 REDIS_QUEUES="webhook"
 
 
